Drop custom AdhocQueryBuilder