@@ -13,25 +13,25 @@ import org.junit.jupiter.api.Test;
 import eu.solven.adhoc.ADagTest;
 import eu.solven.adhoc.ITabularView;
 import eu.solven.adhoc.MapBasedTabularView;
-import eu.solven.adhoc.aggregations.max.MaxAggregator;
-import eu.solven.adhoc.aggregations.max.MaxTransformation;
 import eu.solven.adhoc.aggregations.sum.SumAggregator;
 import eu.solven.adhoc.aggregations.sum.SumCombination;
+import eu.solven.adhoc.database.InMemoryDatabase;
+import eu.solven.adhoc.database.PrefixTranscoder;
 import eu.solven.adhoc.query.AdhocQuery;
 import eu.solven.adhoc.transformers.Aggregator;
 import eu.solven.adhoc.transformers.Combinator;
 
-public class TestAggregations_Double extends ADagTest {
+public class TestAggregations_Transcoding extends ADagTest {
+	final public InMemoryDatabase rows =
+			InMemoryDatabase.builder().transcoder(PrefixTranscoder.builder().prefix("p_").build()).build();
+
 	@Override
 	@BeforeEach
 	public void feedDb() {
-		rows.add(Map.of("k1", 123D));
-		rows.add(Map.of("k2", 234D));
-		rows.add(Map.of("k1", 345F, "k2", 456F));
-	}
+		// As assume the data in DB is already prefixed with `_p`
+		rows.add(Map.of("p_c", "v1", "p_k1", 123D));
+		rows.add(Map.of("p_c", "v2", "p_k2", 234D));
 
-	@Test
-	public void testSumOfSum() {
 		amb.addMeasure(Combinator.builder()
 				.name("sumK1K2")
 				.underlyingNames(Arrays.asList("k1", "k2"))
@@ -40,7 +40,10 @@ public class TestAggregations_Double extends ADagTest {
 
 		amb.addMeasure(Aggregator.builder().name("k1").aggregationKey(SumAggregator.KEY).build());
 		amb.addMeasure(Aggregator.builder().name("k2").aggregationKey(SumAggregator.KEY).build());
+	}
 
+	@Test
+	public void testGrandTotal() {
 		ITabularView output = aqe.execute(AdhocQuery.builder().measure("sumK1K2").build(), rows);
 
 		List<Map<String, ?>> keySet = output.keySet().collect(Collectors.toList());
@@ -50,23 +53,12 @@ public class TestAggregations_Double extends ADagTest {
 
 		Assertions.assertThat(mapBased.getCoordinatesToValues())
 				.hasSize(1)
-				.containsEntry(Collections.emptyMap(),
-						// "k1", 123 + 345, "k2", 234 + 456,
-						Map.of("sumK1K2", 0D + 123 + 234 + 345 + 456));
+				.containsEntry(Collections.emptyMap(), Map.of("sumK1K2", 0D + 123 + 234));
 	}
 
 	@Test
-	public void testSumOfMax() {
-		amb.addMeasure(Combinator.builder()
-				.name("sumK1K2")
-				.underlyingNames(Arrays.asList("k1", "k2"))
-				.combinationKey(SumCombination.KEY)
-				.build());
-
-		amb.addMeasure(Aggregator.builder().name("k1").aggregationKey(MaxAggregator.KEY).build());
-		amb.addMeasure(Aggregator.builder().name("k2").aggregationKey(MaxAggregator.KEY).build());
-
-		ITabularView output = aqe.execute(AdhocQuery.builder().measure("sumK1K2").build(), rows);
+	public void testFilter() {
+		ITabularView output = aqe.execute(AdhocQuery.builder().measure("sumK1K2").andFilter("c", "v1").build(), rows);
 
 		List<Map<String, ?>> keySet = output.keySet().collect(Collectors.toList());
 		Assertions.assertThat(keySet).hasSize(1).contains(Collections.emptyMap());
@@ -75,23 +67,28 @@ public class TestAggregations_Double extends ADagTest {
 
 		Assertions.assertThat(mapBased.getCoordinatesToValues())
 				.hasSize(1)
-				.containsEntry(Collections.emptyMap(),
-						// "k1", 345, "k2", 456,
-						Map.of("sumK1K2", 0D + 345 + 456));
+				.containsEntry(Collections.emptyMap(), Map.of("sumK1K2", 0D + 123));
 	}
 
 	@Test
-	public void testMaxOfSum() {
-		amb.addMeasure(Combinator.builder()
-				.name("maxK1K2")
-				.underlyingNames(Arrays.asList("k1", "k2"))
-				.combinationKey(MaxTransformation.KEY)
-				.build());
+	public void testGroupBy() {
+		ITabularView output = aqe.execute(AdhocQuery.builder().measure("sumK1K2").groupByColumns("c").build(), rows);
 
-		amb.addMeasure(Aggregator.builder().name("k1").aggregationKey(SumAggregator.KEY).build());
-		amb.addMeasure(Aggregator.builder().name("k2").aggregationKey(SumAggregator.KEY).build());
+		List<Map<String, ?>> keySet = output.keySet().collect(Collectors.toList());
+		Assertions.assertThat(keySet).hasSize(2).contains(Map.of("c", "c1"), Map.of("c", "c2"));
 
-		ITabularView output = aqe.execute(AdhocQuery.builder().measure("maxK1K2").build(), rows);
+		MapBasedTabularView mapBased = MapBasedTabularView.load(output);
+
+		Assertions.assertThat(mapBased.getCoordinatesToValues())
+				.hasSize(2)
+				.containsEntry(Map.of("c", "c1"), Map.of("sumK1K2", 0D + 123))
+				.containsEntry(Map.of("c", "c2"), Map.of("sumK1K2", 0D + 234));
+	}
+
+	@Test
+	public void testFilterGroupBy() {
+		ITabularView output =
+				aqe.execute(AdhocQuery.builder().measure("sumK1K2").andFilter("c", "c1").groupByColumns("c").build(), rows);
 
 		List<Map<String, ?>> keySet = output.keySet().collect(Collectors.toList());
 		Assertions.assertThat(keySet).hasSize(1).contains(Collections.emptyMap());
@@ -100,8 +97,6 @@ public class TestAggregations_Double extends ADagTest {
 
 		Assertions.assertThat(mapBased.getCoordinatesToValues())
 				.hasSize(1)
-				.containsEntry(Collections.emptyMap(),
-						// "k1", 123 + 345, "k2", 234 + 456,
-						Map.of("maxK1K2", 0D + 234 + 456));
+				.containsEntry(Collections.emptyMap(), Map.of("sumK1K2", 0D + 123));
 	}
 }
